5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1638_2729.log
== TEST (2019-04-13 15:55:03) 
-- CODE:
a=int(input("digite um numero: "))
b=int(input("digite outro numero: "))
a + b = k
if (k % 2 == 0):
	print(a+b)
else:
	print(b-a)
-- ERROR:
File "XXXX", line 3
    a + b = k
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:55:51) 
-- CODE:
a=int(input("digite um numero: "))
b=int(input("digite outro numero: "))
if ((a+b) % 2 == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:56:00) 
-- CODE:
a=int(input("digite um numero: "))
b=int(input("digite outro numero: "))
if ((a+b) % 2 == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 15:56:08) 
-- CODE:
a=int(input("digite um numero: "))
b=int(input("digite outro numero: "))
if ((a+b) % 2 == 0):
	print(a+b)
else:
	print(b-a)
-- EXECUTION TIME:
0.204739
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:56:30) 
-- CODE:
a=int(input("digite um numero: "))
b=int(input("digite outro numero: "))
if ((a*b) % 2 == 0):
	print(a+b)
else:
	print(b-a)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 15:56:36) 
-- CODE:
a=int(input("digite um numero: "))
b=int(input("digite outro numero: "))
if ((a*b) % 2 == 0):
	print(a+b)
else:
	print(b-a)
-- EXECUTION TIME:
0.173878
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
